# mvp-match

./: .gitignore  README.md  Vending Machine.postman_collection.json  pyproject.toml
vending_machine/: pytest.ini
vending_machine/vending/: apps.py  choices.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
vending_machine/vending/exceptions/: exception_handler.py  exceptions.py
vending_machine/vending/migrations/: 0001_initial.py
vending_machine/vending/tests/: conftest.py  test_buy.py  test_deposit.py  test_product.py
vending_machine/vending_machine/: asgi.py  settings.py  urls.py  wsgi.py
